oxiplate-derive/tests/config/crates/number-escaper/tests/broken/number-escaper.stderr
error: Failed to parse `/oxiplate.toml`: Expected path `19` to start with `::`
 --> tests/broken/number-escaper.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
